# linimasa-ai

./: Makefile  README.md  docker-compose.yml  pnpm-lock.yaml
api/: Cargo.toml
api/src/: example_ollama.rs  main.rs  message.rs  room.rs
api/src/example/: http_steam.rs  mod.rs  ollama.rs
app/: layout.tsx  page.tsx
app/chat/[roomId]/: page.tsx
app/login/: layout.tsx
components/: chat-container.tsx  sidebar.tsx  user-profile.tsx
web/app/: globals.css
web/app/api/chat/: route.ts
web/app/chat/: layout.tsx  page.tsx
web/app/login/: page.tsx
web/components/: chat-container.tsx  file-preview.tsx  gantt-chart.tsx  message-attachment.tsx  sidebar.tsx  user-profile.tsx
