[package]
name = "linimasa-ai-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.4"
dotenvy = "0.15.7"
futures = "0.3.31"
ollama-rs = { version = "0.3.1", features = ["stream"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
